kubernetes/apps/pihole/overlays/prod/dashboard-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect
  namespace: pihole

spec:
  redirectRegex:
    regex: ^https:\/\/([^\/]+)\/?$
    replacement: https://$1/admin/
