kubernetes/apps/pihole/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`pihole.sobrinho.pt`)
      middlewares:
        - name: dashboard-redirect
      kind: Rule
      services:
        - name: pihole-web
          port: http
  tls:
    secretName: pihole-cert
